--- a/modules/characters/client/views/character-sheet/skills.subview.html
+++ b/modules/characters/client/views/character-sheet/skills.subview.html
@@ -10,7 +10,12 @@
   </div>
 
   <div ng-repeat="attribute in vm.skills" class="row list-group-item">
-    <div class="col-sm-3" ng-bind="attribute.name"></div>
+    <div class="col-sm-3">
+      <b ng-if="vm.character.playableClass[0].profession.saveProficiencies.indexOf(attribute.name) > -1">
+        {{attribute.name}}*
+      </b>
+      <span ng-if="vm.character.playableClass[0].profession.saveProficiencies.indexOf(attribute.name) === -1" ng-bind="attribute.name"></span>
+    </div>
     <div class="col-sm-2 text-center"> {{vm.character.attributes[attribute.name]}} ({{vm.toModifier(vm.character.attributes[attribute.name])}})</div>
     <div class="col-sm-2 text-center" ng-bind="vm.getSaveMod(attribute.name)"></div>
     <div class="col-sm-5">
