--- a/modules/characters/client/views/view-character.client.view.html
+++ b/modules/characters/client/views/view-character.client.view.html
@@ -15,11 +15,23 @@
 
   <div class="row">
     <div class="col-md-6">
-      <div ng-include="'modules/characters/client/views/character-sheet/skills.subview.html'"></div>
+      <div class="row">
+        <div ng-include="'modules/characters/client/views/character-sheet/main.subview.html'"></div>
+      </div>
+      <hr>
+      <div class="row">
+        <div ng-include="'modules/characters/client/views/character-sheet/skills.subview.html'"></div>
+      </div>
+    </div>
+    <div class="col-md-offset-1 col-md-5">
+      <div class="row">
+        <div ng-include="'modules/characters/client/views/character-sheet/background.subview.html'"></div>
+      </div>
+      <hr>
+      <div class="row">
+        <div ng-include="'modules/characters/client/views/character-sheet/inventory.subview.html'"></div>
+      </div>
+    </div>
   </div>
-  <div class="col-md-offset-1 col-md-5">
-    <div ng-include="'modules/characters/client/views/character-sheet/inventory.subview.html'"></div>
-</div>
-</div>
 
 </section>
