Inventory now has equip button

--- a/modules/characters/client/views/character-sheet/main.subview.html
+++ b/modules/characters/client/views/character-sheet/main.subview.html
@@ -18,7 +18,7 @@
   <div class="col-xs-6">
     <div class="row">
       <div class="col-xs-12 text-right">
-        {{vm.character.race.name}} {{vm.character.background.generalization}}
+        <b>{{vm.character.race.name}} {{vm.character.background.generalization.name}}</b>
       </div>
     </div>
     <div class="row" ng-repeat="prof in vm.character.playableClass">
