--- a/modules/characters/client/views/character-sheet/inventory.subview.html
+++ b/modules/characters/client/views/character-sheet/inventory.subview.html
@@ -4,20 +4,32 @@
 </div>
   <div class="list-group" ng-if="vm.character.items.length > 0">
     <div class="row"><b>
+      <div ng-if="vm.character._id">
+        <div class="col-sm-1">Eqp</div>
+      </div>
       <div class="col-sm-5">Name</div>
       <div class="col-sm-3">Type</div>
-      <div class="col-sm-2">Price</div>
+      <div class="col-sm-3">Price</div>
     </b></div>
     <div style="overflow: auto; overflow-x: hidden; max-height: 250px;">
       <div class="list-group-item row" ng-repeat="item in vm.character.items | unique: '_id' track by $index" >
+        <div ng-if="vm.character._id">
+          <div class="col-sm-1" ng-init="equipped[item.name] = false" ng-click="equipped[item.name] = !equipped[item.name]">
+            <span class="glyphicon can-select" aria-hidden="true"
+                ng-class="{'glyphicon-unchecked': !equipped[item.name],
+                            'glyphicon-check': equipped[item.name]}"></span>
+          </div>
+        </div>
         <div class="col-sm-5">{{item.name}}{{vm.accountForMultiples(item)}}</div>
         <div class="col-sm-3" ng-bind="item.classification"></div>
         <div class="col-sm-2">{{item.price}} ℝ</div>
         <div class="col-sm-1" ng-click="vm.infoItem = item">
           <span class="glyphicon glyphicon-info-sign can-select" aria-hidden="true"></span>
         </div>
-        <div class="col-sm-1" ng-click="vm.removeItem(item)" ng-if="!vm.character._id">
-          <span class="glyphicon glyphicon-minus-sign can-select" aria-hidden="true"></span>
+        <div ng-if="!vm.character._id">
+          <div class="col-sm-1" ng-click="vm.removeItem(item)">
+            <span class="glyphicon glyphicon-minus-sign can-select" aria-hidden="true"></span>
+          </div>
         </div>
       </div>
     </div>
