Fixes from Jon's CC

--- a/modules/characters/client/views/creationSteps/character.creation.attributes.subview.html
+++ b/modules/characters/client/views/creationSteps/character.creation.attributes.subview.html
@@ -15,7 +15,7 @@
 
   <!-- Point Buy -->
   <div class="col-xs-4 text-center">
-    <div class="input-group" ng-init="vm.character.attributes[attribute.name]=8">
+    <div class="input-group">
       <span class="input-group-btn">
         <button type="button"
             ng-click="vm.character.attributes[attribute.name] = vm.removePoint(vm.character.attributes[attribute.name])"
