--- a/modules/articles/client/views/list-articles.client.view.html
+++ b/modules/articles/client/views/list-articles.client.view.html
@@ -11,7 +11,7 @@
         <span ng-bind="article.author"></span>
       </small>
       <h4 class="list-group-item-heading" ng-bind="article.title"></h4>
-      <p class="list-group-item-text" ng-bind="article.content"></p>
+      <p class="list-group-item-text" ng-bind="smallDescription(article.content)"></p>
     </a>
   </div>
   <div ng-if="articles.$resolved && !articles.length">
