--- a/modules/characters/client/views/creationSteps/character.creation.skills.subview.html
+++ b/modules/characters/client/views/creationSteps/character.creation.skills.subview.html
@@ -27,8 +27,14 @@
                   && vm.character.skills.length >= vm.numberProficiencies()"
             ng-click="vm.toggleProficiency(skill)">
         </div>
-        <div class="col-xs-2">({{vm.getSkillMod(skill, attribute.name)}})</div>
-        <div class="col-xs-8 check-no-margin">{{skill}}</div>
+        <b ng-if="vm.character.skills.indexOf(skill) > -1" style="margin-top: 0; margin-bottom: 0;">
+          <div class="col-xs-2"><span ng-if="vm.getSkillMod(skill, attribute.name) >0">+</span>{{vm.getSkillMod(skill, attribute.name)}}</div>
+          <div class="col-xs-8 check-no-margin">{{skill}}*</div>
+        </b>
+        <span ng-if="vm.character.skills.indexOf(skill) === -1">
+          <div class="col-xs-2"><span ng-if="vm.getSkillMod(skill, attribute.name) >0">+</span>{{vm.getSkillMod(skill, attribute.name)}}</div>
+          <div class="col-xs-8 check-no-margin">{{skill}}</div>
+        </span>
       </div>
     </div>
   </div>
