--- a/modules/backgrounds/client/views/form-background.client.view.html
+++ b/modules/backgrounds/client/views/form-background.client.view.html
@@ -21,16 +21,31 @@
         </div>
 
         <div class="row">
-          <button type="button" class="btn btn-default" ng-click="vm.background.traits.push('')">Add Trait</button>
-          <button type="button" class="btn btn-default" ng-click="vm.background.ideals.push('')">Add Ideal</button>
-          <button type="button" class="btn btn-default" ng-click="vm.background.bonds.push('')">Add Bond</button>
-          <button type="button" class="btn btn-default" ng-click="vm.background.flaws.push('')">Add Flaw</button>
-          <br>
+          <div class="col-sm-3">
+            <div class="dropdown" dropdown>
+              <button type="button" class="btn btn-default" dropdown-toggle>
+                Add Skill Proficiency Option <span class="caret"></span></button>
+                <ul class="dropdown-menu">
+                  <li ng-repeat="skill in vm.skillsAvailable">
+                    <a href ng-click="vm.addSkill(skill)">{{skill}}</a></li>
+                </ul>
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <button type="button" class="btn btn-default" ng-click="vm.background.traits.push('')">Add Trait</button>
+            <button type="button" class="btn btn-default" ng-click="vm.background.ideals.push('')">Add Ideal</button>
+            <button type="button" class="btn btn-default" ng-click="vm.background.bonds.push('')">Add Bond</button>
+            <button type="button" class="btn btn-default" ng-click="vm.background.flaws.push('')">Add Flaw</button>
+          </div>
         </div>
+        <br>
 
         <div class="row" ng-show="vm.background.traits.length > 0">
-          <h4>Traits</h4>
-          <div ng-repeat="trait in vm.background.traits track by $index">
+          <h4><span class="glyphicon glyphicon-eye-open can-select"
+                ng-class="{'glyphicon-eye-open': !isHidden['tracks'],
+                           'glyphicon-eye-close': isHidden['tracks']}"
+                ng-click="isHidden['tracks'] = !isHidden['tracks']"></span> Traits</h4>
+          <div ng-if="!isHidden['tracks']" ng-repeat="trait in vm.background.traits track by $index">
             <p class="input-group">
               <input type="text" ng-model="vm.background.traits[$index]" class="form-control">
               <span class="input-group-btn">
@@ -43,8 +58,11 @@
         </div>
 
         <div class="row" ng-show="vm.background.ideals.length > 0">
-          <h4>Ideals</h4>
-          <div ng-repeat="ideal in vm.background.ideals track by $index">
+          <h4><span class="glyphicon glyphicon-eye-open can-select"
+                ng-class="{'glyphicon-eye-open': !isHidden['ideals'],
+                           'glyphicon-eye-close': isHidden['ideals']}"
+                ng-click="isHidden['ideals'] = !isHidden['ideals']"></span> Ideals</h4>
+          <div ng-if="!isHidden['ideals']"  ng-repeat="ideal in vm.background.ideals track by $index">
             <p class="input-group">
               <input type="text" ng-model="vm.background.ideals[$index]" class="form-control">
               <span class="input-group-btn">
@@ -57,8 +75,11 @@
         </div>
 
         <div class="row" ng-show="vm.background.bonds.length > 0">
-          <h4>Bonds</h4>
-          <div ng-repeat="bond in vm.background.bonds track by $index">
+          <h4><span class="glyphicon glyphicon-eye-open can-select"
+                ng-class="{'glyphicon-eye-open': !isHidden['bonds'],
+                           'glyphicon-eye-close': isHidden['bonds']}"
+                ng-click="isHidden['bonds'] = !isHidden['bonds']"></span> Bonds</h4>
+          <div ng-if="!isHidden['bonds']" ng-repeat="bond in vm.background.bonds track by $index">
             <p class="input-group">
               <input type="text" ng-model="vm.background.bonds[$index]" class="form-control">
               <span class="input-group-btn">
@@ -71,8 +92,11 @@
         </div>
 
         <div class="row" ng-show="vm.background.flaws.length > 0">
-          <h4>Flaws</h4>
-          <div ng-repeat="flaw in vm.background.flaws track by $index">
+          <h4><span class="glyphicon glyphicon-eye-open can-select"
+                ng-class="{'glyphicon-eye-open': !isHidden['flaws'],
+                           'glyphicon-eye-close': isHidden['flaws']}"
+                ng-click="isHidden['flaws'] = !isHidden['flaws']"></span> Flaws</h4>
+          <div ng-if="!isHidden['flaws']" ng-repeat="flaw in vm.background.flaws track by $index">
             <p class="input-group">
               <input type="text" ng-model="vm.background.flaws[$index]" class="form-control">
               <span class="input-group-btn">
@@ -81,6 +105,15 @@
                 </button>
               </span>
             </p>
+          </div>
+        </div>
+
+        <div class="row" ng-show="vm.background.skillProficiencies.length > 0">
+          <h4>Skill Proficiencies</h4>
+          <div class="col-xs-10">
+            <span class="proficiency-tag" ng-repeat="skill in vm.background.skillProficiencies">
+              {{skill}} <a href ng-click="vm.removeSkillProficiency(skill)" class="glyphicon glyphicon-remove-circle"></a>
+            </span></p>
           </div>
         </div>
 
