--- a/modules/professions/client/views/form-profession.client.view.html
+++ b/modules/professions/client/views/form-profession.client.view.html
@@ -71,7 +71,7 @@
           <div class="col-xs-4">
             <div class="dropdown" dropdown>
               <button type="button" class="btn btn-default" dropdown-toggle>
-                Add Proficiency Option <span class="caret"></span></button>
+                Add Skill Proficiency Option <span class="caret"></span></button>
                 <ul class="dropdown-menu">
                   <li ng-repeat="skill in vm.skillsAvailable">
                     <a href ng-click="vm.addSkill(skill)">{{skill}}</a></li>
