--- a/modules/characters/client/views/view-character.client.view.html
+++ b/modules/characters/client/views/view-character.client.view.html
@@ -3,11 +3,12 @@
   <div class="page-header">
     <div class="pull-right">
       <div ng-if="vm.character.player._id === vm.authentication.user._id || vm.authentication.user.roles.indexOf('admin') > -1">
+        <level-up-button level="{{vm.character.level}}" professions="{{vm.character.playableClass}}"></level-up-button>
         <a class="btn btn-primary"
            data-ui-sref="characters.edit({ characterId: vm.character._id })">
           <i class="glyphicon glyphicon-edit"></i>
         </a>
-        <a class="btn btn-primary" data-ng-click="vm.remove()">
+        <a class="btn btn-danger" data-ng-click="vm.remove()">
           <i class="glyphicon glyphicon-trash"></i>
         </a>
       </div>
