--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -47,10 +47,10 @@ a:hover .header-profile-image {
   position: absolute;
   float: left;
   width: 50%;
-  height: 100%;
-  left: 0;
-  margin-left: 16px;
-  max-height: 85%
+  height: 90%;
+  top: 6.8%;
+  left: 16px;
+  max-height: 80%
 }
 
 .right-panel {
@@ -59,5 +59,10 @@ a:hover .header-profile-image {
   width: 50%;
   height: 100%;
   right: 0;
-  max-height: 85%
+  max-height: 80%
+}
+
+
+body {
+  overflow-x: hidden;
 }
