--- a/modules/characters/client/views/directives/player-inventory.view.html
+++ b/modules/characters/client/views/directives/player-inventory.view.html
@@ -1,10 +1,10 @@
 <div class="row">
   <div class="col-xs-6"><h4>Inventory</h4></div>
-  <div class="col-xs-6 text-right"><h5>Funds: {{vm.character.funds}}</h5></div>
+  <div class="col-xs-6 text-right"><h5>Funds: {{vm.character.funds}} ℝ</h5></div>
 </div>
   <div class="list-group" ng-if="vm.character.items.length > 0">
     <div class="row"><b>
-      <div ng-if="vm.character._id">
+      <div ng-if="vm.canEquip">
         <div class="col-sm-1">Eqp</div>
       </div>
       <div class="col-sm-5">Name</div>
@@ -13,7 +13,7 @@
     </b></div>
     <div style="overflow: auto; overflow-x: hidden; max-height: 250px;">
       <div class="list-group-item row" ng-repeat="item in vm.character.items | unique: '_id' track by $index" >
-        <div ng-if="vm.character._id">
+        <div ng-if="vm.canEquip">
           <div class="col-sm-1" ng-init="equipped[item.name] = false" ng-click="equipped[item.name] = !equipped[item.name]">
             <span class="glyphicon can-select" aria-hidden="true"
                 ng-class="{'glyphicon-unchecked': !equipped[item.name],
@@ -26,7 +26,7 @@
         <div class="col-sm-1" ng-click="vm.infoItem = item">
           <span class="glyphicon glyphicon-info-sign can-select" aria-hidden="true"></span>
         </div>
-        <div ng-if="!vm.character._id">
+        <div ng-if="vm.canSell">
           <div class="col-sm-1" ng-click="vm.removeItem(item)">
             <span class="glyphicon glyphicon-minus-sign can-select" aria-hidden="true"></span>
           </div>
