--- a/modules/characters/client/views/view-character.client.view.html
+++ b/modules/characters/client/views/view-character.client.view.html
@@ -20,24 +20,21 @@
   </div>
 
 
-
-  <div class="row">
-    <div class="col-md-6">
-      <div class="row">
-        <div ng-include="'modules/characters/client/views/character-sheet/main.subview.html'"></div>
-      </div>
-      <hr>
-      <div class="row">
-        <div ng-include="'modules/characters/client/views/character-sheet/skills.subview.html'"></div>
-      </div>
+  <div class="col-md-12">
+    <div class="row">
+      <div class="col-md-10" ng-include="'modules/characters/client/views/character-sheet/main.subview.html'"></div>
     </div>
-    <div class="col-md-offset-1 col-md-5">
+    <hr>
+    <div class="row">
+      <div class="col-md-10" ng-include="'modules/characters/client/views/character-sheet/skills.subview.html'"></div>
+    </div>
+    <hr>
       <div class="row">
-        <div ng-include="'modules/characters/client/views/character-sheet/background.subview.html'"></div>
+        <div class="col-md-10" ng-include="'modules/characters/client/views/character-sheet/background.subview.html'"></div>
       </div>
       <hr>
       <div class="row">
-        <div ng-include="'modules/characters/client/views/character-sheet/inventory.subview.html'"></div>
+        <player-inventory class="col-md-10" can-equip="{{vm.authentication.user._id === vm.character.player._id}}" character="vm.character"></player-inventory>
       </div>
     </div>
   </div>
