--- a/modules/characters/client/views/creationSteps/character.creation.inventory.view.html
+++ b/modules/characters/client/views/creationSteps/character.creation.inventory.view.html
@@ -1,26 +1,1 @@
-<h3>Consultants and Dragons Guild Shoppe</h3>
-
-<div class="row">
-  <div class="col-sm-4"><b>Name</b></div>
-  <div class="col-sm-3"><b>Type</b></div>
-  <div class="col-sm-3"><b>Raw Value</b></div>
-</div>
-
-<div class="list-group">
-  <div ng-repeat="item in vm.loadedData.items" class="row list-group-item">
-    <div class="col-sm-4">
-      {{item.name}}
-    </div>
-    <div class="col-sm-3" ng-bind="item.classification"></div>
-    <div class="col-sm-3">{{item.price}} riphons</div>
-    <div class="col-sm-1" ng-click="vm.infoItem = item">
-      <span class="glyphicon glyphicon-info-sign can-select" aria-hidden="true"></span>
-    </div>
-    <div class="col-sm-1" ng-click="vm.addItem(item)">
-      <span class="glyphicon glyphicon-plus-sign"
-        ng-class="{'insufficient-funds': (vm.character.funds - item.price) < 0,
-                   'can-select': (vm.character.funds - item.price) >= 0}"
-        aria-hidden="true"></span>
-    </div>
-  </div>
-</div>
+<shop-list name="Old Shop" inventory="vm.loadedData.items" character="vm.character"></shop-list>
