--- a/modules/characters/client/views/creationHelp/character.creation.background.help.view.html
+++ b/modules/characters/client/views/creationHelp/character.creation.background.help.view.html
@@ -1,10 +1,17 @@
 <p>Here you will determine your character's personality. Pick a <b>Generalization</b> at the top, then either use the <i class="fa fa-random"></i> button to randomize a trait, bond, ideal, or flaw, or enter in your own. After you're satisfied, enter in a short history about your character and how they came to be where they currently are.</p>
-<br>
+<p>It is recommended that you pick a background generalization, as they provide skill proficiencies.<br>
 <div ng-show="vm.character.background.generalization">
   <div class="row">
     <div class="col-xs-1 glyphicon glyphicon-info-sign"></div>
     <div class="col-xs-11">
       <b>{{vm.character.background.generalization.name}}</b>
+      <p>This background provides the following Skill Proficiencies:
+        <b ng-if="vm.character.background.generalization.skillProficiencies.length === 0">None</b>
+        <b ng-if="vm.character.background.generalization.skillProficiencies.length > 0"
+          ng-repeat="skill in vm.character.background.generalization.skillProficiencies track by $index">
+          {{skill}}{{($index < vm.character.background.generalization.skillProficiencies.length-1) ? ', ': ''}}
+        </b>
+      </p>
       <p>{{vm.character.background.generalization.description}}</p>
     </div>
   </div>
