--- a/modules/items/client/views/form-item.client.view.html
+++ b/modules/items/client/views/form-item.client.view.html
@@ -45,11 +45,14 @@
                 <label class="control-label" for="classification">Item Classification</label>
                 <select class="form-control" name="classification" ng-model="vm.item.classification" required>
                     <option value="Armor">Armor</option>
+                    <option value="Component">Component</option>
+                    <option value="Currency">Currency</option>
                     <option value="Kit">Kit</option>
                     <option value="Potion">Potion</option>
                     <option value="Ring">Ring</option>
                     <option value="Scroll">Scroll</option>
                     <option value="Staff">Staff</option>
+                    <option value="Tool">Tool</option>
                     <option value="Wand">Wand</option>
                     <option value="Weapon">Weapon</option>
                     <option value="Wondrous Item">Wondrous Item</option>
