--- a/modules/backgrounds/client/views/form-background.client.view.html
+++ b/modules/backgrounds/client/views/form-background.client.view.html
@@ -48,7 +48,7 @@
                 ng-click="isHidden['specifications'] = !isHidden['specifications']"></span> Specifications</h4>
             <p class="input-group">
               <span class="input-group-addon">Specification Type</span>
-              <input type="text" ng-model="vm.background.specificiation" class="form-control">
+              <input type="text" ng-model="vm.background.specification" class="form-control">
             </p>
           <div ng-if="!isHidden['specifications']" ng-repeat="specification in vm.background.specifications track by $index">
             <p class="input-group">
