--- a/modules/backgrounds/client/views/view-background.client.view.html
+++ b/modules/backgrounds/client/views/view-background.client.view.html
@@ -1,26 +1,28 @@
 <section>
   <div class="page-header">
-    <h1 data-ng-bind="vm.background.name"></h1>
+    <h1 ng-bind="vm.background.name"></h1>
   </div>
-  <div class="pull-right"
-       data-ng-show="vm.background.isCurrentUserOwner">
-    <a class="btn btn-primary"
-       data-ui-sref="backgrounds.edit({ backgroundId: vm.background._id })">
-      <i class="glyphicon glyphicon-edit"></i>
-    </a>
-    <a class="btn btn-primary" data-ng-click="vm.remove()">
-      <i class="glyphicon glyphicon-trash"></i>
-    </a>
+    <div class="row">
+      <div class="col-md-12" ng-bind="vm.background.description"></div>
+    </div>
+    <hr>
+    <div class="row" ng-if="vm.background['specifications']">
+      <h3 ng-bind="vm.background.specification"></h3>
+      <ol>
+        <li ng-repeat="entry in vm.background['specifications']">  {{entry}}</li>
+      </ol>
+    </div>
+    <div class="row" ng-repeat="type in ['traits', 'ideals', 'bonds', 'flaws']">
+      <h3 ng-if="vm.background[type]">{{type.charAt(0) | uppercase}}{{type.slice(1)}}</h3>
+      <ol>
+        <li ng-repeat="entry in vm.background[type]">  {{entry}}</li>
+      </ol>
+    </div>
   </div>
-  <small>
-    <em class="text-muted">
-      Posted on
-      <span data-ng-bind="vm.background.created | date:'mediumDate'"></span>
-      by
-      <span data-ng-if="vm.background.user"
-            data-ng-bind="vm.background.user.displayName"></span>
-      <span data-ng-if="!vm.background.user">Deleted User</span>
-    </em>
-  </small>
-  <p class="lead" data-ng-bind="vm.background.content"></p>
+  <div class="row" ng-show="vm.background.skillProficiencies.length > 0">
+    <h4>Skill Proficiencies</h4>
+    <div class="col-xs-10">
+      <span class="proficiency-tag" ng-repeat="skill in vm.background.skillProficiencies">{{skill}}</span>
+    </div>
+  </div>
 </section>
