--- a/modules/backgrounds/client/views/view-background.client.view.html
+++ b/modules/backgrounds/client/views/view-background.client.view.html
@@ -5,24 +5,20 @@
     <div class="row">
       <div class="col-md-12" ng-bind="vm.background.description"></div>
     </div>
+    <br>
+    <div class="row" ng-show="vm.background.skillProficiencies.length > 0">
+      <div class="col-md-12">
+        <b>Skill Proficiencies:</b>  <span class="proficiency-tag" ng-repeat="skill in vm.background.skillProficiencies">{{skill}}  </span>
+      </div>
+    </div>
     <hr>
     <div class="row" ng-if="vm.background['specifications']">
       <h3 ng-bind="vm.background.specification"></h3>
-      <ol>
-        <li ng-repeat="entry in vm.background['specifications']">  {{entry}}</li>
-      </ol>
+      <ol><li ng-repeat="entry in vm.background['specifications']">  {{entry}}</li></ol>
     </div>
     <div class="row" ng-repeat="type in ['traits', 'ideals', 'bonds', 'flaws']">
       <h3 ng-if="vm.background[type]">{{type.charAt(0) | uppercase}}{{type.slice(1)}}</h3>
-      <ol>
-        <li ng-repeat="entry in vm.background[type]">  {{entry}}</li>
-      </ol>
-    </div>
-  </div>
-  <div class="row" ng-show="vm.background.skillProficiencies.length > 0">
-    <h4>Skill Proficiencies</h4>
-    <div class="col-xs-10">
-      <span class="proficiency-tag" ng-repeat="skill in vm.background.skillProficiencies">{{skill}}</span>
+      <ol><li ng-repeat="entry in vm.background[type]">  {{entry}}</li></ol>
     </div>
   </div>
 </section>
