--- a/modules/core/client/views/landing.client.view.html
+++ b/modules/core/client/views/landing.client.view.html
@@ -16,7 +16,7 @@
   <div class="col-md-10">
     <h2>Latest News</h2>
     <div ng-repeat="article in news|limitTo:3">
-      <h4><a class="can-select" href="/articles/{{article._id}}">{{article.title}}</a></h4>
+      <h4><a class="can-select" href="/news/{{article._id}}">{{article.title}}</a></h4>
       <p>{{article.content}}</p>
       <hr>
     </div>
