--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -48,6 +48,7 @@ a:hover .header-profile-image {
   float: left;
   width: 50%;
   height: 90%;
+  max-width: 48%;
   top: 6.8%;
   left: 16px;
   max-height: 80%
@@ -57,6 +58,7 @@ a:hover .header-profile-image {
   position: absolute;
   float: right;
   width: 50%;
+  max-width: 48%;
   height: 100%;
   right: 0;
   max-height: 80%
