--- a/modules/characters/client/views/list-characters.client.view.html
+++ b/modules/characters/client/views/list-characters.client.view.html
@@ -1,6 +1,6 @@
 <section>
   <div class="page-header">
-    <div class="pull-right">
+    <div ng-if="vm.canCreateCharacter()" class="pull-right">
       <button type="button" class="btn btn-primary" data-ui-sref="characters.create">
           <i class="glyphicon glyphicon-pencil"></i> Create a New Character</button>
     </div>
