--- a/modules/episodes/client/views/list-episodes.client.view.html
+++ b/modules/episodes/client/views/list-episodes.client.view.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
   <div class="page-header">
-    <div class="pull-right">
+    <div class="pull-right" ng-if="vm.canCreate()">
       <button type="button" class="btn btn-primary" data-ui-sref="episodes.create">
           <i class="glyphicon glyphicon-pencil"></i> Create a New Episode</button>
     </div>
