--- a/modules/professions/client/views/form-profession.client.view.html
+++ b/modules/professions/client/views/form-profession.client.view.html
@@ -18,15 +18,45 @@
           </div>
 
           <div class="col-sm-offset-1 col-sm-2">
-            <label class="control-label" for="vm.profession.hitDice">Hit Die Type</label>
-            <input type="number"
-                   ng-model="vm.profession.hitDice"
-                   class="att-entry form-control"
-                   required>
+            <label class="control-label">Hit Die Type</label>
+            <div class="dropdown" dropdown>
+              <button type="button" class="btn btn-default" dropdown-toggle>
+                d{{vm.profession.hitDice}} <span class="caret"></span></button>
+                <ul class="dropdown-menu">
+                  <li><a href ng-click="vm.profession.hitDice = 4">d4</a></li>
+                  <li><a href ng-click="vm.profession.hitDice = 6">d6</a></li>
+                  <li><a href ng-click="vm.profession.hitDice = 8">d8</a></li>
+                  <li><a href ng-click="vm.profession.hitDice = 10">d10</a></li>
+                  <li><a href ng-click="vm.profession.hitDice = 12">d12</a></li>
+                </ul>
+            </div>
          </div>
 
-         <div class="col-sm-2">
-           <label class="control-label"># Skill Proficiencies</label>
+         <!-- Archetype Selection Level Requirement -->
+         <div class="col-sm-2 text-center">
+           <label class="control-label" tooltip="The level requirement for the player to be able to choose his archetype">Archetype Level</label>
+            <div class="input-group">
+              <span class="input-group-btn">
+                <button type="button"
+                    ng-disabled="vm.profession.archetypeLevelRequirement === 1"
+                    ng-click="vm.profession.archetypeLevelRequirement = vm.profession.archetypeLevelRequirement - 1"
+                    class="btn btn-default" ><i class="fa fa-minus"></i></button>
+              </span>
+              <input type="number"
+                    ng-model="vm.profession.archetypeLevelRequirement"
+                    class="text-center att-entry form-control"></input>
+              <span class="input-group-btn">
+                <button type="button"
+                    ng-disabled="vm.profession.archetypeLevelRequirement === 20"
+                    ng-click="vm.profession.archetypeLevelRequirement = vm.profession.archetypeLevelRequirement + 1"
+                    class="btn btn-default" ><i class="fa fa-plus"></i></button>
+              </span>
+            </div>
+          </div>
+
+        <!-- Number of Skill Proficiencies -->
+         <div class="col-sm-2 text-center">
+           <label class="control-label" tooltip="Number of skill proficiencies the player can choose at character creation">Skill Proficiencies</label>
             <div class="input-group">
               <span class="input-group-btn">
                 <button type="button"
@@ -43,11 +73,11 @@
                     class="btn btn-default" ><i class="fa fa-plus"></i></button>
               </span>
             </div>
-        </div>
+          </div>
        </div>
 
         <div class="row">
-          <div class="col-sm-10">
+          <div class="col-sm-12">
             <label class="control-label" for="vm.profession.description">Class Description</label>
             <textarea name="enabled" ng-model="vm.profession.description" class="form-control" required
               pleaceholder="Enter some information about this class (used in the Help Area for Character Creation)">
@@ -57,8 +87,9 @@
         </div>
 
         <div class="row">
-          <div class="col-xs-4">
-            <div class="dropdown" dropdown>
+          <div class="col-sm-12">
+            <button type="button" class="btn btn-default" ng-click="vm.profession.archetypes.push({})">New Archetype</button>
+            <span class="dropdown" dropdown>
               <button type="button" class="btn btn-default" dropdown-toggle>
                 Add Save Proficiency<span class="caret"></span></button>
                 <ul class="dropdown-menu">
@@ -66,22 +97,21 @@
                     <a href ng-click="vm.addSaveProficiency(save)">{{save}}</a>
                   </li>
                 </ul>
-            </div>
-          </div>
-          <div class="col-xs-4">
-            <div class="dropdown" dropdown>
+            </span>
+            <span class="dropdown" dropdown>
               <button type="button" class="btn btn-default" dropdown-toggle>
                 Add Skill Proficiency Option <span class="caret"></span></button>
                 <ul class="dropdown-menu">
                   <li ng-repeat="skill in vm.skillsAvailable">
                     <a href ng-click="vm.addSkill(skill)">{{skill}}</a></li>
                 </ul>
-            </div>
-            <br>
+            </span>
           </div>
         </div>
 
+        <!-- Proficiencies -->
         <div class="row">
+          <br>
           <div class="col-xs-10">
             <p><b>Save Proficiencies</b></p>
             <p><span class="proficiency-tag" ng-repeat="save in vm.profession.saveProficiencies">
@@ -95,6 +125,15 @@
             <p><span class="proficiency-tag" ng-repeat="skill in vm.profession.skillProficiencies">
               {{skill}} <a href ng-click="vm.removeSkillProficiency(skill)" class="fa fa-times-circle-o"></a>
             </span></p>
+          </div>
+        </div>
+
+        <div class="row">
+          <h3>Archetypes</h3>
+          <div ng-repeat="archetype in vm.profession.archetypes"
+              class="col-sm-12 well"
+              ng-init="archetypeVisible[$index] = true"
+              ng-include="'modules/professions/client/views/archetype.trait.subview.html'">
           </div>
         </div>
 
